<resources>
    <string name="app_name">BRT App</string>
    <string name="icon">icon</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="background">background</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="id_number">ID Card Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="pay">Payment</string>
    <string name="payment">Pay</string>
    <string name="brt_service">BRT Services</string>
    <string name="useful_service">Useful Services</string>
    <string name="directions">Directions</string>
    <string name="want_to_go_to_a_specific_destination_nwe_help">Want to go to a specific destination?\nWe help!</string>
    <string name="postal_code">Postal Code</string>
    <string name="profile">Profile</string>
    <string name="edit_your_profile_check_fines_nand_more">Edit your profile, check fines\nand more</string>
    <string name="display_full_name">Display Full Name</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="view_fines">View fines</string>
    <string name="logout">Logout</string>
    <string name="delete_your_account">Delete your account</string>
</resources>