<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_menu_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tub_logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/registation_form_rectangle" />

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/full_name_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:ems="14"
            android:hint="@string/full_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/card_number_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:ems="14"
            android:hint="@string/id_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/date_birth_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_centerHorizontal="true"
            android:hint="@string/date_of_birth"
            android:layout_marginTop="300dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/phone_number_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="420dp"
            android:ems="14"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_reg"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/standard_button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>