<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_menu_background">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tub_logo"
        android:contentDescription="@string/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="380dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/background"
            app:srcCompat="@drawable/login_form_rectangle" />


        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/person_icon" />

        <TextView
            android:id="@+id/login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_icon"
            android:textColor="@color/buttonColorStandard"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:ems="12"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="230dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/standard_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>