<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundStandard"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/include4"
        layout="@layout/header" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@drawable/ret_nguloperfil"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="93dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/perfil"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textoPerfil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_full_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/textoPerfil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00/00/00"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/textoPerfil3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="919-081-475"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/textoPerfil4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="juliuscaesar@romanempire.com"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="450dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/edit_profile_rectangle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/white_rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColorStandard"
            android:text="@string/edit_your_profile"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

        <ImageView
            android:id="@+id/view_fines_rectangle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/edit_profile_rectangle"
            android:background="@drawable/white_rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColorStandard"
            android:text="@string/view_fines"
            android:layout_marginTop="125dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

        <ImageView
            android:id="@+id/logout_rectangle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/view_fines_rectangle"
            android:background="@drawable/white_rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColorStandard"
            android:text="@string/logout"
            android:layout_marginTop="225dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

        <ImageView
            android:id="@+id/delete_account_rectangle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/logout_rectangle"
            android:background="@drawable/white_rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColorStandard"
            android:text="@string/delete_your_account"
            android:layout_marginTop="325dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botaoredondo"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/botaoredondo"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/botaoredondo"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/botaoredondo"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>